# Serverless-Merge-Sort-Frontend-Yew-App

./: Cargo.toml  index.html
src/: main.rs  style.css
static/: style.css
