[package]
name = "sam-merge-sort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.3.0"
wasm-bindgen-futures = "0.4.37"
yew = { version = "0.20.0", features = ["csr"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "HtmlInputElement",
  "KeyboardEvent"
]
